--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.port = 8090
 spring.h2.console.enabled = true;
 spring.datasource.url = jdbc:h2:mem:testdb;
 spring.jpa.defer-datasource-initialization = true;
+#spring.security.user.name =username;
+#spring.security.user.password =password;
